@@ -14,6 +14,7 @@ and ideas to make this software available.
 	Daniel Hanks <hanksdc@plug.org>
 	Leif Hedstrom <leif@netscape.com>
 	Emile Heitor <eheitor@isdnet.net>
+	Szymon Juraszczyk <szymon@ssk.pl>
 	Joe Little <jlittle@open-it.org>
 	Phillip Liu <phillip@loudcloud.com>
 	Jeff Mandel <jeff.mandel@probes.com>
