@@ -13,6 +13,7 @@ AC_ARG_ENABLE(rfc2307bis, [  --enable-rfc2307bis       use RFC2307bis schema ], 
 AC_ARG_ENABLE(ids-uid, [  --enable-ids-uid          permit RFC822 values for uid attribute ], [AC_DEFINE(IDS_UID)])
 AC_ARG_ENABLE(no-so-keepalive, [  --enable-no-so-keepalive  disable SO_KEEPALIVE ], [AC_DEFINE(DISABLE_SO_KEEPALIVE)])
 AC_ARG_ENABLE(debugging, [  --enable-debugging        enable debug code ], [AC_DEFINE(DEBUG)])
+AC_ARG_ENABLE(authpassword, [  --enable-authpassword     enable checking of authPassword attribute ], [AC_DEFINE(AUTHPASSWORD)])
 AC_ARG_WITH(ldap-lib, [  --with-ldap-lib=type      select ldap library [auto|netscape3|netscape4|umich|openldap]])
 AC_ARG_WITH(ldap-dir, [  --with-ldap-dir=DIR       base directory of ldap SDK])
 
